added nav + content area

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,6 @@
-hello world
+
+
+<div class="content">
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla hic cumque dolorem accusamus, assumenda earum atque ab, culpa quod accusantium reprehenderit sapiente nostrum, vitae itaque modi. Dolores consequatur laboriosam voluptates aliquid libero eaque harum nisi blanditiis veniam possimus reprehenderit fuga ipsum natus repellat, ipsa maxime odit voluptas. Quos, perferendis nobis, animi libero rerum harum minima qui eius aperiam ducimus, provident quaerat autem impedit amet labore? Accusamus harum rem ipsam doloremque vel minus ex dolore quasi aut eligendi amet ea accusantium cum earum, quae optio dolores ad recusandae? Dolores necessitatibus dignissimos repudiandae neque sint voluptatem quas et aspernatur error. Ex, nostrum.
+
+</div>
