--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,7 +1,83 @@
-#wrapper {
-  background-image: url('./images/baking.jpg');
-  width: 85%;
-  height: 85%;
-  background-repeat: no-repeat;
-  background-size: contain;
+@mixin startGrid($cs, $ce, $rs, $re) {
+  grid-column-start: $cs;
+  grid-column-end: $ce;
+  grid-row-start: $rs;
+  grid-row-end: $re;
+}
+
+body {
+  background: white;
+  width: 100vw;
+  height: 100vh;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: [line1]2% [line2]15% [line3]71% [line4]10% [line5]2%;
+  grid-template-rows: [row1]5% [row2]10%[row3]60%[row4] 20%[row5] 5%;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+
+}
+
+.content {
+  @include startGrid(line3,line4 ,row2 ,row5 );
+  background: white;
+  padding: 3vh 3vw;
+  margin: 1vh 1vw;
+  border: black solid 1px;
+  z-index: 1;
+}
+
+
+// navbar
+
+.nav_wrapper{
+ @include startGrid(line2, line5, row3, row4);
+ margin: 1vw;
+ z-index: 0;
+}
+
+.nav {
+  background: black;
+  color: rgb(255, 251, 251);
+  cursor: pointer;
+  padding: 10vh 1vw 5vh 1vw ;
+  height: 5px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+  background-size: cover;
+  z-index: 0;
+  text-align: left;
+}
+
+.active,
+.nav:hover {
+  background-color: rgb(67, 150, 175);
+}
+
+// link style
+
+ul,
+a:link,
+a:visited {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+ul,
+a:link:active,
+a:visited:active {
+  color: white;
+}
+
+a:hover {
+  color: white;
+
 }
