--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,19 +2,25 @@
 <html>
 
   <head>
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="./public/css/materialize.min.css" media="screen,projection" />
-
-    <!--Let browser know website is optimized for mobile-->
+    <link type="text/css" rel="stylesheet" href="/scss/main.css"
+      media="screen,projection" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 
   <body>
-      <%= yield %>
-    <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="./public/js/materialize.min.js"></script>
-  </body>
+    <div class="wrapper">
+      <div class="nav_wrapper">
+        <button class="nav"><a href="/">Home</a></button>
+        <button class="nav"><a href="/">Cakes</a></button>
+        <button class="nav"><a href="/">Cookies</a></button>
+        <button class="nav"><a href="/">Muffins</a></button>
+        <button class="nav"><a href="/">Contact Us</a></button>
+      </div>
+      <div class="content">
+        <%= yield %>
+        </div>
+      </div>
+      <script type="text/javascript" src="main.js"></script>
+    </body>
 
-</html>
+  </html>
