--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,7 +16,9 @@
         <button class="nav"><a href="/">Muffins</a></button>
         <button class="nav"><a href="/">Contact Us</a></button>
       </div>
-      <div class="content">
+      <div class="content_box">
+
+        <div class="heading"><h1> Mangia </h1> </div>
         <%= yield %>
         </div>
       </div>
