--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -1,7 +1,10 @@
 body {
-  background: white;
+  background-image: url("/images/bakery_bg2.jpg");
   width: 100vw;
-  height: 100vh; }
+  height: 100vh;
+  background-repeat: repeat;
+  @import url("https://fonts.googleapis.com/css?family=Kaushan+Script");
+  font-family: 'Kaushan Script', cursive; }
 
 .wrapper {
   display: grid;
@@ -11,16 +14,32 @@ body {
   height: 100vh;
   overflow: hidden; }
 
-.content {
+.content_box {
   grid-column-start: line3;
   grid-column-end: line4;
   grid-row-start: row2;
   grid-row-end: row5;
-  background: white;
+  background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(20, 20, 20, 0.5)), url("/images/content_bg.jpg");
+  background-size: 100vw 100vh;
+  background-repeat: no-repeat;
   padding: 3vh 3vw;
   margin: 1vh 1vw;
   border: black solid 1px;
   z-index: 1; }
+
+.content {
+  grid-column-start: line3;
+  grid-column-end: line4;
+  grid-row-start: row3;
+  grid-row-end: row5;
+  padding: 6vh 3vw;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 2em; }
+
+.heading {
+  text-align: center;
+  padding-bottom: .5vh;
+  font-size: 1em; }
 
 .nav_wrapper {
   grid-column-start: line2;
@@ -40,15 +59,15 @@ body {
   border: none;
   text-align: left;
   outline: none;
+  font-family: 'Kaushan Script', cursive;
   font-size: 15px;
   transition: 0.4s;
   background-size: cover;
-  z-index: 0;
-  text-align: left; }
+  z-index: 0; }
 
 .active,
 .nav:hover {
-  background-color: #4396af; }
+  background-color: #cfbf9a; }
 
 ul,
 a:link,
