catalog page up

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,11 +10,11 @@
   <body>
     <div class="wrapper">
       <div class="nav_wrapper">
-        <button class="nav"><a href="/">Home</a></button>
-        <button class="nav"><a href="/">Cakes</a></button>
-        <button class="nav"><a href="/">Cookies</a></button>
-        <button class="nav"><a href="/">Muffins</a></button>
-        <button class="nav"><a href="/">Contact Us</a></button>
+        <a href="/"><button class="nav">Home</button></a>
+        <a href="/cakes"><button class="nav">Cakes</button></a>
+        <a href="/cookies"><button class="nav">Cookies</button></a>
+        <a href="/muffins"><button class="nav">Muffins</button></a>
+        <a href="/contact_us"><button class="nav">Contact Us</button></a>
       </div>
       <div class="content_box">
 
