--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -1,10 +1,11 @@
 body {
-  background-image: url("/images/bakery_bg2.jpg");
+  background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(20, 20, 20, 0.9)), url("/images/bakery_bg2.jpg");
   width: 100vw;
   height: 100vh;
   background-repeat: repeat;
   @import url("https://fonts.googleapis.com/css?family=Kaushan+Script");
-  font-family: 'Kaushan Script', cursive; }
+  font-family: 'Kaushan Script', cursive;
+  overflow: hidden; }
 
 .wrapper {
   display: grid;
@@ -19,13 +20,14 @@ body {
   grid-column-end: line4;
   grid-row-start: row2;
   grid-row-end: row5;
-  background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(20, 20, 20, 0.5)), url("/images/content_bg.jpg");
+  background: linear-gradient(rgba(255, 255, 255, 0.3), rgba(20, 20, 20, 0.5)), url("/images/content_bg.jpg");
   background-size: 100vw 100vh;
   background-repeat: no-repeat;
   padding: 3vh 3vw;
   margin: 1vh 1vw;
   border: black solid 1px;
-  z-index: 1; }
+  z-index: 1;
+  overflow: scroll; }
 
 .content {
   grid-column-start: line3;
@@ -40,6 +42,15 @@ body {
   text-align: center;
   padding-bottom: .5vh;
   font-size: 1em; }
+
+.form {
+  grid-column-start: line3;
+  grid-column-end: line4;
+  grid-row-start: row3;
+  grid-row-end: row5;
+  padding: 6vh 3vw;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 2em; }
 
 .nav_wrapper {
   grid-column-start: line2;
@@ -67,7 +78,7 @@ body {
 
 .active,
 .nav:hover {
-  background-color: #cfbf9a; }
+  background: rgba(207, 191, 154, 0.7); }
 
 ul,
 a:link,
