--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -6,12 +6,13 @@
 }
 
 body {
-  background-image: url('/images/bakery_bg2.jpg');
+  background: linear-gradient( rgba(255, 255, 255, .8), rgba(20, 20, 20, .9)), url('/images/bakery_bg2.jpg');
   width: 100vw;
   height: 100vh;
   background-repeat: repeat;
   @import url('https://fonts.googleapis.com/css?family=Kaushan+Script');
   font-family: 'Kaushan Script', cursive;
+  overflow: hidden;
 }
 
 .wrapper {
@@ -28,17 +29,15 @@ body {
   line4,
   row2,
   row5);
-   background: linear-gradient( rgba(255, 255, 255, .7), rgba(20, 20, 20, .5)),
-  url('/images/content_bg.jpg');
+  background: linear-gradient( rgba(255, 255, 255, .3), rgba(20, 20, 20, .5)), url('/images/content_bg.jpg');
   background-size: 100vw 100vh;
   background-repeat: no-repeat;
-
   padding: 3vh 3vw;
   margin: 1vh 1vw;
   border: black solid 1px;
   z-index: 1;
+  overflow: scroll;
 }
-
 
 .content {
   @include startGrid(line3,
@@ -51,10 +50,18 @@ body {
 }
 
 .heading {
-  // box-shadow: 8px 8px 1px -2px #F2DFB1;
   text-align: center;
   padding-bottom: .5vh;
   font-size: 1em;
+}
+
+.form {
+  @include startGrid(line3, line4, row3, row5);
+  padding: 6vh 3vw;
+  font-family: Arial,
+  Helvetica,
+  sans-serif;
+  line-height: 2em;
 }
 
 // navbar
@@ -77,8 +84,7 @@ body {
   border: none;
   text-align: left;
   outline: none;
- font-family: 'Kaushan Script',
-  cursive;
+  font-family: 'Kaushan Script', cursive;
   font-size: 15px;
   transition: 0.4s;
   background-size: cover;
@@ -87,7 +93,7 @@ body {
 
 .active,
 .nav:hover {
-  background-color: rgb(207, 191, 154);
+  background: rgba(207, 191, 154, .7),
 }
 
 // link style
