--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,10 @@
 
 
 <div class="content">
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla hic cumque dolorem accusamus, assumenda earum atque ab, culpa quod accusantium reprehenderit sapiente nostrum, vitae itaque modi. Dolores consequatur laboriosam voluptates aliquid libero eaque harum nisi blanditiis veniam possimus reprehenderit fuga ipsum natus repellat, ipsa maxime odit voluptas. Quos, perferendis nobis, animi libero rerum harum minima qui eius aperiam ducimus, provident quaerat autem impedit amet labore? Accusamus harum rem ipsam doloremque vel minus ex dolore quasi aut eligendi amet ea accusantium cum earum, quae optio dolores ad recusandae? Dolores necessitatibus dignissimos repudiandae neque sint voluptatem quas et aspernatur error. Ex, nostrum.
 
+   <p class"1st"> We started with a dream a simple dream. To make sure that anyone that's eating our pastries, can't help but smile.</p>
+    <p class="2nd"> The mother daughter duo, started there journey togther. They both wanted to cook togther and grow togther.</p>
+    <p class="3rd"> A single busines women, and her 13 year old daughter bring the love back into baking</p>
+    <p class="4th"> Come, join them on their journey to delisciosness</p>
+    <p class="5th"> They have many locations across the U.S. now and are looking for great partners with the same intergrity to help expand</p>
 </div>
