--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,7 +22,7 @@
         <%= yield %>
         </div>
       </div>
-      <script type="text/javascript" src="main.js"></script>
+      <script type="text/javascript" src="/scss/main.js"></script>
     </body>
 
   </html>
