--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,6 +5,7 @@
     <link type="text/css" rel="stylesheet" href="/scss/main.css"
       media="screen,projection" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mangi Torta</title>
   </head>
 
   <body>
@@ -18,7 +19,7 @@
       </div>
       <div class="content_box">
 
-        <div class="heading"><h1> Mangia </h1> </div>
+        <div class="heading"><h1> Mangi Torta </h1> </div>
         <%= yield %>
         </div>
       </div>
