--- a/views/cookies.erb
+++ b/views/cookies.erb
@@ -1,1 +1,78 @@
-cookies 
+<div class="row">
+  <div class="column">
+
+    <div class="container">
+      <img src="/images/walnut.jpg" alt="Avatar"
+        class="image">
+      <div class="overlay">
+        <div class="text" id="cookie1"></div>
+      </div>
+    </div>
+
+    <div class="container">
+      <img src="/images/rasberry_cookie.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text" id="cookie2"></div>
+      </div>
+    </div>
+
+    <div class="container">
+      <img src="/images/red_velvet_cookie.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text" id="cookie3"></div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="column">
+
+    <div class="container">
+      <img src="/images/fruit_cake_thumb.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text" id="cookie4"></div>
+      </div>
+    </div>
+
+    <div class="container">
+      <img src="/images/coffee_cake_thumb.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text" id="cookie5"></div>
+      </div>
+    </div>
+    
+    <div class="container">
+      <img src="/images/strawberry_cheesecake_thumb.jpg" alt="Avatar"
+        class="image">
+      <div class="overlay">
+        <div class="text" id="cookie1"></div>
+      </div>
+    </div>
+
+
+  </div>
+
+  <div class="column">
+
+    <div class="container">
+      <img src="/images/dbl_choc.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text" id="cookie2"></div>
+      </div>
+    </div>
+
+    <div class="container">
+      <img src="/images/choc_cookie.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text" id="cookie5"></div>
+      </div>
+    </div>
+
+    <div class="container">
+      <img src="/images/cookies_thumb.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text" id="cookie1"></div>
+      </div>
+    </div>
+
+  </div>
