--- a/views/index.erb
+++ b/views/index.erb
@@ -1,10 +1,17 @@
 
-
 <div class="content">
 
-   <p class"1st"> We started with a dream a simple dream. To make sure that anyone that's eating our pastries, can't help but smile.</p>
-    <p class="2nd"> The mother daughter duo, started there journey togther. They both wanted to cook togther and grow togther.</p>
-    <p class="3rd"> A single busines women, and her 13 year old daughter bring the love back into baking</p>
-    <p class="4th"> Come, join them on their journey to delisciosness</p>
-    <p class="5th"> They have many locations across the U.S. now and are looking for great partners with the same intergrity to help expand</p>
+<div class="">
+<p> WELCOME </p>
+<p>Our Hours of Ops</p>
+<p>Mon - Sat: 8am to 7pm </p>
+<p>Sun: 9am to 7pm </p>
+
+<p> You can find us at: </p>
+<p>900 Home grown Street </p>
+<p>New York, NY 10012</p>
+<p>phone(212) 219 2773</p>
 </div>
+</div>
+
+<script type="text/javascript" src="/scss/layout.js">
