--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,7 +5,7 @@
     <link type="text/css" rel="stylesheet" href="/scss/main.css"
       media="screen,projection" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mangi Torta</title>
+    <title>Confection Connection</title>
   </head>
 
   <body>
@@ -17,9 +17,9 @@
         <a href="/muffins"><button class="nav">Muffins</button></a>
         <a href="/contact_us"><button class="nav">Contact Us</button></a>
       </div>
-      <div class="content_box">
+      <div class="content_box" id="p2">
 
-        <div class="heading"><h1> Mangi Torta </h1> </div>
+        <div class="heading"><h1> Confection Connection </h1> </div>
         <%= yield %>
         </div>
       </div>
