--- a/views/muffins.erb
+++ b/views/muffins.erb
@@ -1,1 +1,78 @@
-muffins
+<div class="row">
+  <div class="column">
+
+    <div class="container">
+      <img src="/images/30layer_thumb.jpg" alt="Avatar"
+        class="image">
+      <div class="overlay">
+        <div class="text" id="muffin1"></div>
+      </div>
+    </div>
+
+    <div class="container">
+      <img src="/images/caramel_nut_thumb.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text" id="muffin2"></div>
+      </div>
+    </div>
+
+    <div class="container">
+      <img src="/images/velvet_thumb.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text" id="muffin3"></div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="column">
+
+    <div class="container">
+      <img src="/images/fruit_cake_thumb.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text" id="muffin4"></div>
+      </div>
+    </div>
+
+    <div class="container">
+      <img src="/images/coffee_cake_thumb.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text" id="muffin5"></div>
+      </div>
+    </div>
+    
+    <div class="container">
+      <img src="/images/strawberry_cheesecake_thumb.jpg" alt="Avatar"
+        class="image">
+      <div class="overlay">
+        <div class="text" id="muffin6"></div>
+      </div>
+    </div>
+
+
+  </div>
+
+  <div class="column">
+
+    <div class="container">
+      <img src="/images/fudge_thumb.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text" id="muffin7"></div>
+      </div>
+    </div>
+
+    <div class="container">
+      <img src="/images/glass_cake_thumb.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text" id="muffin8"></div>
+      </div>
+    </div>
+
+    <div class="container">
+      <img src="/images/white_frosted_thumb.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text" id="muffin9"></div>
+      </div>
+    </div>
+
+  </div>
