--- a/views/contact_us.erb
+++ b/views/contact_us.erb
@@ -1,20 +1,18 @@
 <div class="form">
 <form action="/contact_us" method="post">
-  First name:<br>
+  First name:
   <input type="text" name="firstname" value="Mickey">
-  <br>
-  Last name:<br>
-  <input type="text" name="lastname" value="Mouse">
-  <br>
-  Email:<br>
-   <input type="text" name="email" value="mickey.mouse@gmail.com">
-  <br>
-  What can we help you with?:<br>
-   <input type="text" name="subject" cols="30vw" width="48" value="Send me your catalog">
   <br><br>
+  Last name:
+  <input type="text" name="lastname" value="Mouse">
+  <br><br>
+  Email:
+   <input type="text" name="email" value="">
+  <br><br>
+  What can we help you with?:
    <input type="text" name="content" placeholder="Email Body">
   <br><br>
-  <input type="submit" value="Go">
+  <input type="submit" value="Submit">
 </form>
 </div> 
 
