--- a/views/cakes.erb
+++ b/views/cakes.erb
@@ -76,3 +76,6 @@
     </div>
 
   </div>
+
+<script type="text/javascript" src="/js/main.js"></script>
+  <script type="text/javascript" src="/js/cake.js">
