--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -29,7 +29,9 @@ body {
   line4,
   row2,
   row5);
-  background: linear-gradient( rgba(255, 255, 255, .2), rgba(20, 20, 20, .7)), url('/images/content_bg.jpg');
+  background: linear-gradient( rgba(255, 255, 255, .2), rgba(20, 20, 20, .7)),; 
+  
+  // url('/images/content_bg.jpg');
   background-size: 100vw 100vh;
   background-repeat: no-repeat;
   padding: 3vh 3vw;
