--- a/views/cookies.erb
+++ b/views/cookies.erb
@@ -45,7 +45,7 @@
       <img src="/images/strawberry_cheesecake_thumb.jpg" alt="Avatar"
         class="image">
       <div class="overlay">
-        <div class="text" id="cookie1"></div>
+        <div class="text" id="cookie6"></div>
       </div>
     </div>
 
@@ -57,22 +57,24 @@
     <div class="container">
       <img src="/images/dbl_choc.jpg" alt="Avatar" class="image">
       <div class="overlay">
-        <div class="text" id="cookie2"></div>
+        <div class="text" id="cookie7"></div>
       </div>
     </div>
 
     <div class="container">
       <img src="/images/choc_cookie.jpg" alt="Avatar" class="image">
       <div class="overlay">
-        <div class="text" id="cookie5"></div>
+        <div class="text" id="cookie8"></div>
       </div>
     </div>
 
     <div class="container">
       <img src="/images/cookies_thumb.jpg" alt="Avatar" class="image">
       <div class="overlay">
-        <div class="text" id="cookie1"></div>
+        <div class="text" id="cookie9"></div>
       </div>
     </div>
-
   </div>
+
+<script type="text/javascript" src="/js/main.js"></script>
+<script type="text/javascript" src="/js/cookie.js">
