--- a/views/layout.erb
+++ b/views/layout.erb
@@ -23,7 +23,7 @@
         <%= yield %>
         </div>
       </div>
-      <script type="text/javascript" src="/scss/main.js"></script>
+      <script type="text/javascript" src="/js/main.js"></script>
     </body>
 
   </html>
