--- a/views/cookies.erb
+++ b/views/cookies.erb
@@ -2,7 +2,7 @@
   <div class="column">
 
     <div class="container">
-      <img src="/images/walnut.jpg" alt="Avatar"
+      <img src="/images/chocolateChip.jpg" alt="Avatar"
         class="image">
       <div class="overlay">
         <div class="text" id="cookie1"></div>
@@ -10,14 +10,14 @@
     </div>
 
     <div class="container">
-      <img src="/images/rasberry_cookie.jpg" alt="Avatar" class="image">
+      <img src="/images/oatmeal.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text" id="cookie2"></div>
       </div>
     </div>
 
     <div class="container">
-      <img src="/images/red_velvet_cookie.jpg" alt="Avatar" class="image">
+      <img src="/images/almond.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text" id="cookie3"></div>
       </div>
@@ -28,21 +28,21 @@
   <div class="column">
 
     <div class="container">
-      <img src="/images/fruit_cake_thumb.jpg" alt="Avatar" class="image">
+      <img src="/images/red_velvet_cookie.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text" id="cookie4"></div>
       </div>
     </div>
 
     <div class="container">
-      <img src="/images/coffee_cake_thumb.jpg" alt="Avatar" class="image">
+      <img src="/images/pistaCookie.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text" id="cookie5"></div>
       </div>
     </div>
     
     <div class="container">
-      <img src="/images/strawberry_cheesecake_thumb.jpg" alt="Avatar"
+      <img src="/images/rasberrycenter.jpg" alt="Avatar"
         class="image">
       <div class="overlay">
         <div class="text" id="cookie6"></div>
@@ -55,21 +55,21 @@
   <div class="column">
 
     <div class="container">
-      <img src="/images/dbl_choc.jpg" alt="Avatar" class="image">
+      <img src="/images/walnutCookie.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text" id="cookie7"></div>
       </div>
     </div>
 
     <div class="container">
-      <img src="/images/choc_cookie.jpg" alt="Avatar" class="image">
+      <img src="/images/frostingCookie.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text" id="cookie8"></div>
       </div>
     </div>
 
     <div class="container">
-      <img src="/images/cookies_thumb.jpg" alt="Avatar" class="image">
+      <img src="/images/assortment.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text" id="cookie9"></div>
       </div>
