--- a/views/muffins.erb
+++ b/views/muffins.erb
@@ -2,7 +2,7 @@
   <div class="column">
 
     <div class="container">
-      <img src="/images/30layer_thumb.jpg" alt="Avatar"
+      <img src="/images/cinimonroll.jpg" alt="Avatar"
         class="image">
       <div class="overlay">
         <div class="text" id="muffin1"></div>
@@ -10,14 +10,14 @@
     </div>
 
     <div class="container">
-      <img src="/images/caramel_nut_thumb.jpg" alt="Avatar" class="image">
+      <img src="/images/appleoat.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text" id="muffin2"></div>
       </div>
     </div>
 
     <div class="container">
-      <img src="/images/velvet_thumb.jpg" alt="Avatar" class="image">
+      <img src="/images/blueberry.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text" id="muffin3"></div>
       </div>
@@ -28,21 +28,21 @@
   <div class="column">
 
     <div class="container">
-      <img src="/images/fruit_cake_thumb.jpg" alt="Avatar" class="image">
+      <img src="/images/erdbeermuffin.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text" id="muffin4"></div>
       </div>
     </div>
 
     <div class="container">
-      <img src="/images/coffee_cake_thumb.jpg" alt="Avatar" class="image">
+      <img src="/images/lemonblueberry.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text" id="muffin5"></div>
       </div>
     </div>
     
     <div class="container">
-      <img src="/images/strawberry_cheesecake_thumb.jpg" alt="Avatar"
+      <img src="/images/meatnegg.jpg" alt="Avatar"
         class="image">
       <div class="overlay">
         <div class="text" id="muffin6"></div>
@@ -55,24 +55,27 @@
   <div class="column">
 
     <div class="container">
-      <img src="/images/fudge_thumb.jpg" alt="Avatar" class="image">
+      <img src="/images/cornbread.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text" id="muffin7"></div>
       </div>
     </div>
 
     <div class="container">
-      <img src="/images/glass_cake_thumb.jpg" alt="Avatar" class="image">
+      <img src="/images/ricottafig.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text" id="muffin8"></div>
       </div>
     </div>
 
     <div class="container">
-      <img src="/images/white_frosted_thumb.jpg" alt="Avatar" class="image">
+      <img src="/images/chocolatechipmuffin.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text" id="muffin9"></div>
       </div>
     </div>
 
   </div>
+
+<script type="text/javascript" src="/js/main.js"></script>
+<script type="text/javascript" src="/js/muffin.js">
