--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -20,9 +20,8 @@ body {
   grid-column-end: line4;
   grid-row-start: row2;
   grid-row-end: row5;
-  background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(20, 20, 20, 0.7));
-  background-size: 100vw 100vh;
-  background-repeat: no-repeat;
+  background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.3)), url("/images/content_bg3.jpg");
+  background-repeat: repeat;
   padding: 3vh 3vw;
   margin: 1vh 1vw;
   border: black solid 1px;
@@ -125,13 +124,11 @@ a:hover {
 /* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 800px) {
   .column {
-    -ms-flex: 50%;
     flex: 50%;
     max-width: 50%; } }
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
   .column {
-    -ms-flex: 100%;
     flex: 100%;
     max-width: 100%; } }
 .container {
