--- a/views/cakes.erb
+++ b/views/cakes.erb
@@ -78,4 +78,4 @@
   </div>
 
 <script type="text/javascript" src="/js/main.js"></script>
-  <script type="text/javascript" src="/js/cake.js">
+<script type="text/javascript" src="/js/cake.js"></script>
