--- a/views/cookies.erb
+++ b/views/cookies.erb
@@ -77,4 +77,4 @@
   </div>
 
 <script type="text/javascript" src="/js/main.js"></script>
-<script type="text/javascript" src="/js/cookie.js">
+<script type="text/javascript" src="/js/cookie.js"></script>
