--- a/views/index.erb
+++ b/views/index.erb
@@ -14,4 +14,5 @@
 </div>
 </div>
 
-<script type="text/javascript" src="/js/layout.js">
+<script type="text/javascript" src="/js/main.js"></script>
+<script type="text/javascript" src="/js/layout.js"></script>
