--- a/views/contact_us.erb
+++ b/views/contact_us.erb
@@ -1,4 +1,6 @@
 <div class="form">
+let us know what you think <br>
+Fill out the form below for our catalog!<br>
 <form action="/contact_us" method="post">
   First name:
   <input type="text" name="firstname" value="Mickey">
@@ -8,9 +10,6 @@
   <br><br>
   Email:
    <input type="text" name="email" value="">
-  <br><br>
-  What can we help you with?:
-   <input type="text" name="content" placeholder="Email Body">
   <br><br>
   <input type="submit" value="Submit">
 </form>
